--- a/backend/motherhood_app/pubspec.yaml
+++ b/backend/motherhood_app/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   js: ^0.6.7
+  url_launcher: ^6.1.14 
   cupertino_icons: ^1.0.2
   provider: ^6.1.0
   dio: ^5.4.0  
