--- a/backend/motherhood_app/pubspec.yaml
+++ b/backend/motherhood_app/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   shared_preferences: ^2.2.2  
   flutter_local_notifications: ^16.1.0  
   firebase_core: ^3.12.1 
-  firebase_messaging: ^15.2.4  
+  firebase_messaging: ^15.2.4 
+  firebase_storage: ^12.4.5
   intl: ^0.19.0  
   json_serializable: ^6.7.1  
   google_fonts: ^6.2.1  
